# python-test

./: .pre-commit-config.yaml  Makefile  pyproject.toml
poetry_demo/: __init__.py
tests/: __init__.py
